# REDBattle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
REDBattle/src/: RenderState.cpp  RenderState.h  main.cpp
REDBattle/src/AALib/: AASystemRED.cpp  AASystemRED.h
REDBattle/src/AALib/Base/: sys_Camera.cpp  sys_Camera.h  sys_CameraManager.h  sys_Collision.h  sys_ManagerBase.h  sys_Math.h  sys_RandomManager.h
REDBattle/src/AALib/Base/Jon/: JonCommon.cpp  JonCommon.h  JonStruct.h  tl_Jon.h
REDBattle/src/AALib/Common/: cmn_class.h  cmn_hashex.cpp  cmn_hashex.h  cmn_list.h  cmn_task.h  cmn_typedef.h  tl_Filepack.cpp  tl_Filepack.h  tl_RandMT.h
REDBattle/src/AALib/Common/PackHeader/: PAC_FPac.h
REDBattle/src/Game/: AudioManager.h  REDBattlePlayerInfo.h  REDGameCommon.cpp  REDGameCommon.h  SpawnPlayerInfo.h
REDBattle/src/Game/Battle/: BattleEventManager.cpp  BattleEventManager.h  BattlePlayerResult.h  BattleRoundTimer.h  BattleSettings.h  BattleState.h  battle_ObjectManager.cpp  battle_ObjectManager.h  battle_ScreenManager.cpp  battle_ScreenManager.h  battle_TeamManager.h
REDBattle/src/Game/Battle/Object/: obj_AttackParam.h  obj_BBScript.cpp  obj_BBScript.h  obj_Base.cpp  obj_Base.h  obj_BaseCommon.cpp  obj_BaseCommon.h  obj_Flag.h
REDBattle/src/Game/Battle/Object/Char/: char_ActCmn.h  char_Base.cpp  (+1 more)
REDBattle/src/Game/Scene/: scene_Base.cpp  scene_Base.h  scene_Battle.cpp  scene_Battle.h  scene_Boot.cpp  scene_Boot.h
REDBattle/src/Game/System/: game_key.h  game_key_cmdtbl.h  game_key_flag.h
REDBattle/src/Game/Utility/: UtilityStateMachine.h
REDBattle/src/raylib_interface/: RaylibActor.cpp  RaylibActor.h  RaylibDraw.cpp  RaylibDraw.h  RaylibState.cpp  RaylibState.h
assets/: BBS_CMN.bbsbin  BBS_CMNEF.bbsbin  BBS_DMY.bbsbin  BBS_DMYEF.bbsbin  BBS_SOL.bbsbin  BBS_SOLEF.bbsbin  COL_CMN.pac  COL_DMY.pac  COL_SOL.pac  IMG_SOL.pac  IMG_SOLEF.pac
src/: main.cpp
src/AALib/: AASystemRED.cpp  AASystemRED.h
src/AALib/Base/: sys_Camera.cpp  sys_Camera.h  sys_CameraManager.h  sys_Collision.cpp  sys_Collision.h  sys_ManagerBase.h  sys_Math.h  sys_RandomManager.cpp  sys_RandomManager.h
src/AALib/Base/Jon/: JonCommon.cpp  JonCommon.h  JonStruct.h  tl_Jon.cpp  tl_Jon.h
src/AALib/Common/: cmn_class.h  cmn_hashex.cpp  cmn_hashex.h  cmn_task.h  cmn_typedef.h  tl_Filepack.cpp  tl_Filepack.h  tl_RandMT.cpp  tl_RandMT.h
src/AALib/Common/PackHeader/: PAC_FPac.h
src/Game/: AudioManager.h  REDGameCommon.cpp  REDGameCommon.h  REDGameConstant.h  SpawnPlayerInfo.h
src/Game/Battle/: BattleEventManager.cpp  BattleEventManager.h  BattlePlayerResult.cpp  BattlePlayerResult.h  BattleRecord.h  BattleRoundTimer.h  BattleSettings.cpp  BattleSettings.h  BattleState.cpp  BattleState.h  battle_ObjectManager.cpp  battle_ObjectManager.h  battle_ScreenManager.cpp  battle_ScreenManager.h  battle_TeamManager.cpp  battle_TeamManager.h
src/Game/Battle/Object/: obj_AttackParam.h  obj_BBScript.cpp  obj_BBScript.h  obj_Base.cpp  obj_Base.h  obj_BaseCommon.h  obj_Flag.h  obj_ScriptInc.h  obj_scriptinc.h
src/Game/Battle/Object/Char/: char_ActCmn.h  char_ActFlag.h  char_Base.cpp  char_Base.h
src/Game/Scene/: scene_Base.cpp  scene_Base.h  scene_Battle.cpp  scene_Battle.h  scene_Boot.cpp  scene_Boot.h
src/Game/System/: game_key.cpp  game_key.h  game_key_flag.h
src/Game/Utility/: UtilityStateMachine.cpp  UtilityStateMachine.h
